--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
   <div class="container d-flex h-100 align-items-center">
     <div class="mx-auto text-center">
       <h1 class="mx-auto my-0">VinoTrust</h1>
-      <h2 class="text-white-50 mx-auto mt-2 mb-5">Blockchain based supply chain solution for the wine industry</h2>
+      <h2 class="text-white-50 mx-auto mt-2 mb-5">A wine supply chain solution to ensure provenance, authenticity and integrity</h2>
       <a href="#about" class="btn btn-primary js-scroll-trigger">Find out more</a>
     </div>
   </div>
@@ -67,35 +67,18 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 mx-auto">
-        <h2 class="text-white mb-4">Why VinoTrust?</h2>
-        <p class="text-white-50 mb-4">Through deceptive practices the global reputation of wine authenticity is
-          being threatened.  VinoTrust will assure this authenticity by making your data immutable and
-          verifiable through blockchain. Conceived and designed by wine industry people and developed by
-          leaders in digital and blockchain technology, this is a distinctly ‘out of Industry’ solution.</p>
-      </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-4">
-        <h3 class="text-white mb-2">Authenticity</h3>
-        <p class="text-white-50 pl-3 pr-3">Combats deceptive packaging, copied labels, refilled bottles and
-          misrepresentation of variety and region.</p>
-      </div>
-      <div class="col-lg-4">
-        <h3 class="text-white mb-2">Streamline</h3>
-        <p class="text-white-50 pl-3 pr-3">Streamlines wine production supply chain management.</p>
-      </div>
-      <div class="col-lg-4">
-        <h3 class="text-white mb-2">Global reputation</h3>
-        <p class="text-white-50 pl-3 pr-3">Enhance and protect your global reputation.</p>
+        <h2 class="text-white mb-2">Why VinoTrust?</h2>
+        <p class="text-white-50 mb-4">Through deceptive packaging the reputation of wine producers in all major wine producing countries is being threatened.
+          To deal with this threat wine producers often rely on multiple and complex software options to meet label integrity laws and manage their business.
+        </p>
+        <p class="text-white-50 mb-5">VinoTrust assures wine authenticity while simplifying Wine Australia’s Label Integrity Program record keeping.</p>
       </div>
     </div>
     <div class="row">
       <div class="col-lg-8 mx-auto">
-        <h2 class="text-white mb-2">Why blockchain?</h2>
-        <p class="text-white-50">A blockchain solution is not just about technology, it’s about solving problems that
-          have been insolvable before due to the inability of the ecosystem to share information in a transparent,
-          immutable and trusted manner. Unlike other systems of record, blockchain technology provides a trusted
-          record of data.</p>
+        <h2 class="text-white mb-2">What is deceptive packaging?</h2>
+        <p class="text-white-50">Wine labels copied, wine bottles refilled, grape variety and wine region misrepresented
+          – wines that are not what the label states. </p>
       </div>
     </div>
   </div>
@@ -106,26 +89,17 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 mx-auto text-center mb-5">
-        <h2 class="mb-4">How VinoTrust works</h2>
-        <p class="text-black-50">VinoTrust provides the foundation for a new generation of transactions that
-          establishes trust and transparency. The software-as-a-service (SaaS) solution is working to ensure that
-          trust enables, rather than hinders.</p>
+        <h2 class="mb-2">How does VinoTrust work?</h2>
+        <p class="text-black-50 mb-4">VinoTrust combines new technology, such as blockchain, IoT, cloud and mobile, to
+          provide a trusted, verifiable system where records are geolocated, timestamped, immutableand automated.</p>
       </div>
     </div>
-    <div class="row mb-5">
-      <div class="col-lg-4">
-        <h3 class="mb-4">VinoTrust certified</h3>
-        <p class="text-black-50">The provenance of each bottle of wine is permanently recorded in Blockchain.
-          A VinoTrust verified history for each unit.  A system that helps avoid fraud helps everyone, wine
-          producers, resellers, consumers.</p>
-      </div>
-      <div class="col-lg-4">
-        <h3 class="mb-4">Retail and consumer verified</h3>
-        <p class="text-black-50">Reseller reputation enhanced. Consumer confidence reinforced.</p>
-      </div>
-      <div class="col-lg-4">
-        <h3 class="mb-4">Compliance and integration</h3>
-        <p class="text-black-50">Streamline record keeping and simplify LIP regulatory compliance.</p>
+    <div class="row">
+      <div class="col-lg-8 mx-auto text-center mb-5">
+        <h2 class="mb-2">VInoTrust – an Australian initiative, for the world!</h2>
+        <p class="text-black-50 mb-4">Australia and wine innovation are interlinked. As Australia’s reputation as a wine producer strengthens, so does the risk of wine fraud.
+          Conceived and designed by wine people and developed by leaders in digital and blockchain technology, this is a distinctly ‘out of Industry’ solution.
+        </p>
       </div>
     </div>
   </div>
@@ -136,9 +110,8 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 mx-auto text-white text-center mb-5">
-        <h2 class="mb-4">We can verify</h2>
-        <p class="text-white-50">Each stage of the supply chain is verified. Supply chain becomes transparent
-          to the extent that we want it to be.</p>
+        <h2 class="mb-2">We can verify</h2>
+        <p class="text-white-50">Each stage of the supply chain is verified ensuring provenance, authenticity and integrity.</p>
       </div>
     </div>
     <div class="row mb-5">
@@ -186,8 +159,8 @@
         <img src="img/david.jpg" alt="" class="rounded-circle img-fluid mb-3">
         <h3 class="mb-4">David Travers</h3>
         <p class="text-black-50">Co-Founder</p>
-        <p class="text-black-50 pl-3 pr-3">Grape grower and farmer, David is Chairman of Scope Global; Director, Wine
-          Grape Council SA and was founding Chairman of Sundrop Farms.</p>
+        <p class="text-black-50 pl-3 pr-3">Grapegrower and farmer, David is a committee member of Australian Grape and
+          Wine Inc and a Director of the Wine Grape Council of SA.</p>
       </div>
     </div>
     <div class="row mb-5 text-center">
