--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
       <div class="col-lg-8 mx-auto">
         <h2 class="text-white mb-2">What is deceptive packaging?</h2>
         <p class="text-white-50">Wine labels copied, wine bottles refilled, grape variety and wine region misrepresented
-          – wines that are not what the label states. </p>
+          – wines that are not what the label states.</p>
       </div>
     </div>
   </div>
@@ -89,17 +89,17 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 mx-auto text-center mb-5">
-        <h2 class="mb-2">How does VinoTrust work?</h2>
-        <p class="text-black-50 mb-4">VinoTrust combines new technology, such as blockchain, IoT, cloud and mobile, to
-          provide a trusted, verifiable system where records are geolocated, timestamped, immutable and automated.</p>
+        <h2 class="mb-2">VinoTrust – an Australian initiative, for the world!</h2>
+        <p class="text-black-50 mb-4">Australia and wine innovation are interlinked. As Australia’s reputation as a wine producer strengthens, so does the risk of wine fraud.
+          Conceived and designed by wine people and developed by leaders in digital and blockchain technology, this is a solution built for the industry, by the industry.
+        </p>
       </div>
     </div>
     <div class="row">
       <div class="col-lg-8 mx-auto text-center mb-5">
-        <h2 class="mb-2">VInoTrust – an Australian initiative, for the world!</h2>
-        <p class="text-black-50 mb-4">Australia and wine innovation are interlinked. As Australia’s reputation as a wine producer strengthens, so does the risk of wine fraud.
-          Conceived and designed by wine people and developed by leaders in digital and blockchain technology, this is a distinctly ‘out of Industry’ solution.
-        </p>
+        <h2 class="mb-2">How does VinoTrust work?</h2>
+        <p class="text-black-50 mb-4">VinoTrust combines new technology, such as blockchain, IoT, cloud and mobile, to
+          provide a trusted, verifiable system where records are geolocated, timestamped and immutable.</p>
       </div>
     </div>
   </div>
@@ -177,7 +177,7 @@
       <div class="col-lg-4">
         <img src="img/rob.jpg" alt="" class="rounded-circle img-fluid mb-3">
         <h3 class="mb-4">Rob Allen</h3>
-        <p class="text-black-50">Blockchain Lead</p>
+        <p class="text-black-50">Lead Blockchain Engineer</p>
       </div>
     </div>
     <div class="row mb-5 text-center">
@@ -221,8 +221,8 @@
             <div id="mc_embed_signup">
               <form action="https://vinotrust.us4.list-manage.com/subscribe/post?u=9c17d7169aabeb1af172f0935&amp;id=00025f589d" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
                 <div id="mc_embed_signup_scroll">
-                  <h3>Subscribe to Vinotrust</h3>
-                  <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                  <h3>Keep up to date with VinoTrust</h3>
+                  <div class="indicates-required"><small><span class="asterisk">*</span> indicates required</small></div>
                   <div class="mc-field-group form-group">
                     <label for="mce-EMAIL">Email Address  <span class="asterisk">*</span>
                     </label>
