--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 mx-auto text-white text-center mb-5">
-        <h2 class="mb-2">We can verify</h2>
+        <h2 class="mb-2">We verify</h2>
         <p class="text-white-50">Each stage of the supply chain is verified ensuring provenance, authenticity and integrity.</p>
       </div>
     </div>
@@ -175,7 +175,7 @@
         <p class="text-black-50">UX Facilitator</p>
       </div>
       <div class="col-lg-4">
-        <img src="img/rob.jpg" alt="" class="rounded-circle img-fluid mb-3">
+        <img src="img/rob.jpg?ver=2" alt="" class="rounded-circle img-fluid mb-3">
         <h3 class="mb-4">Rob Allen</h3>
         <p class="text-black-50">Lead Blockchain Engineer</p>
       </div>
