--- a/index.html
+++ b/index.html
@@ -67,6 +67,8 @@
 
   <!-- Custom styles for this template -->
   <link href="css/grayscale.css?ver=0.2" rel="stylesheet">
+  <link href="css/extra-styles.css" rel="stylesheet">
+
 
   <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/img/favicon.ico">
   <link rel="icon" type="image/vnd.microsoft.icon" href="/img/favicon.ico">
