--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <meta property="og:description" content="A wine supply chain solution to ensure provenance, authenticity and integrity." />
   <meta property="og:url" content="https://vinotrust.com.au" />
   <meta property="og:site_name" content="VinoTrust" />
-  <meta property="og:image" content="https://vinotrust.com.au/img/bg.jpg" />
+  <meta property="og:image" content="https://vinotrust.com.au/img/vt-logo-512x512.jpg" />
   <meta property="og:image:width" content="1600" />
   <meta property="og:image:height" content="1066" />
   <meta property="og:image:alt" content="VinoTrust logo" />
@@ -39,7 +39,7 @@
         "legalName" : "VinoTrust",
         "description" : "A wine supply chain solution to ensure provenance, authenticity and integrity.",
         "url": "https://vinotrust.com.au",
-        "logo": "https://vinotrust.com.au/img/bg.jpg",
+        "logo": "https://vinotrust.com.au/img/vt-logo.gif",
         "address": {
             "@type": "PostalAddress",
             "streetAddress": "G&T Technology Pty Ltd, PO BOX 64",
