Add social media to footer

--- a/index.html
+++ b/index.html
@@ -312,6 +312,12 @@
         <a href="https://github.com/GT-Technology" target="_blank" class="mx-2">
           <i class="fab fa-github"></i>
         </a>
+        <a href="https://www.facebook.com/VinoTrustAustralia" target="_blank" class="mx-2">
+          <i class="fab fa-facebook"></i>
+        </a>
+        <a href="https://www.instagram.com/vinotrust/" target="_blank" class="mx-2">
+          <i class="fab fa-instagram"></i>
+        </a>
       </div>
 
     </div>
