Add participants to index.html

--- a/index.html
+++ b/index.html
@@ -191,6 +191,38 @@
   </div>
 </section>
 
+<section id="participants" class="participants-section content-section bg-white">
+  <div class="container">
+    <div class="row">
+      <div class="col-lg-8 mx-auto text-center mb-5">
+        <h2 class="mb-4">VinoTrust participants</h2>
+      </div>
+    </div>
+    <div class="row mb-5">
+      <div class="col-lg-4">
+        <img src="img/participants/grosset-logo.jpg" alt="Grosset Logo" class="img-fluid mb-5">
+      </div>
+      <div class="col-lg-4">
+        <img src="img/participants/kilikanoon-logo.jpg" alt="Kilikanoon Logo" class="img-fluid mb-5">
+      </div>
+      <div class="col-lg-4">
+        <img src="img/participants/kirrihill-wines-logo.png" alt="Kirrihill Wines Logo" class="img-fluid mb-5">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4">
+        <img src="img/participants/mount-horrocks-logo.jpg" alt="Mount Horrocks Single Vineyard Logo" class="img-fluid mb-5">
+      </div>
+      <div class="col-lg-4">
+        <img src="img/participants/tim-adams-logo.jpg" alt="Tim Adams Clare Valley Logo" class="img-fluid mb-5">
+      </div>
+      <div class="col-lg-4">
+        <img src="img/participants/bourke-travers-logo.png" alt="Bourke & Travers Clare Valley Logo" class="img-fluid mb-5">
+      </div>
+    </div>
+  </div>
+</section>
+
 <!-- Team section -->
 <section id="team" class="team-section content-section bg-light">
   <div class="container">
