--- a/index.html
+++ b/index.html
@@ -93,6 +93,9 @@
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
         <li class="nav-item">
+          <a class="nav-link js-scroll-trigger" href="#participants">Participants</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#team">Team</a>
         </li>
         <li class="nav-item">
@@ -199,24 +202,24 @@
       </div>
     </div>
     <div class="row mb-5">
-      <div class="col-lg-4">
+      <div class="col-lg-4 text-center">
         <img src="img/participants/grosset-logo.jpg" alt="Grosset Logo" class="img-fluid mb-5">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 text-center">
         <img src="img/participants/kilikanoon-logo.jpg" alt="Kilikanoon Logo" class="img-fluid mb-5">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 text-center">
         <img src="img/participants/kirrihill-wines-logo.png" alt="Kirrihill Wines Logo" class="img-fluid mb-5">
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4">
+      <div class="col-lg-4 text-center">
         <img src="img/participants/mount-horrocks-logo.jpg" alt="Mount Horrocks Single Vineyard Logo" class="img-fluid mb-5">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 text-center">
         <img src="img/participants/tim-adams-logo.jpg" alt="Tim Adams Clare Valley Logo" class="img-fluid mb-5">
       </div>
-      <div class="col-lg-4">
+      <div class="col-lg-4 text-center">
         <img src="img/participants/bourke-travers-logo.png" alt="Bourke & Travers Clare Valley Logo" class="img-fluid mb-5">
       </div>
     </div>
