--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-8 mx-auto text-center mb-5">
-        <h2 class="mb-4">VinoTrust participants</h2>
+        <h2 class="mb-4">VinoTrust trial participants</h2>
       </div>
     </div>
     <div class="row mb-5">
