--- a/index.html
+++ b/index.html
@@ -223,6 +223,17 @@
         <img src="img/participants/bourke-travers-logo.png" alt="Bourke & Travers Clare Valley Logo" class="img-fluid mb-5">
       </div>
     </div>
+    <div class="row">
+      <div class="col-lg-4 text-center">
+        <img src="img/participants/vanguardist-logo.gif" alt="Vanguardist Wines Logo" class="img-fluid mb-5">
+      </div>
+      <div class="col-lg-4 text-center">
+        <img src="img/participants/pikes-logo.png" alt="Pikes Wines Logo" class="img-fluid mb-5">
+      </div>
+      <div class="col-lg-4 text-center">
+        <img src="img/participants/jim-barry-logo.jpg" alt="Jim Barry Logo" class="img-fluid mb-5">
+      </div>
+    </div>
   </div>
 </section>
 
