taylors and pauletts logo

--- a/index.html
+++ b/index.html
@@ -234,6 +234,14 @@
         <img src="img/participants/jim-barry-logo.jpg" alt="Jim Barry Logo" class="img-fluid mb-5">
       </div>
     </div>
+    <div class="row">
+      <div class="col-lg-4 offset-lg-2 text-center">
+        <img src="img/participants/taylors-logo.jpg" alt="Taylors Wines Logo" class="img-fluid mb-5">
+      </div>
+      <div class="col-lg-4 text-center">
+        <img src="img/participants/pauletts-logo.jpg" alt="Pauletts Wines Logo" class="img-fluid mb-5">
+      </div>
+    </div>
   </div>
 </section>
 
