--- a/index.html
+++ b/index.html
@@ -224,14 +224,19 @@
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 text-center">
-        <img src="img/participants/vanguardist-logo.gif" alt="Vanguardist Wines Logo" class="img-fluid mb-5">
-      </div>
-      <div class="col-lg-4 text-center">
+      <div class="col-lg-4 offset-lg-2 text-center">
         <img src="img/participants/pikes-logo.png" alt="Pikes Wines Logo" class="img-fluid mb-5">
       </div>
       <div class="col-lg-4 text-center">
         <img src="img/participants/jim-barry-logo.jpg" alt="Jim Barry Logo" class="img-fluid mb-5">
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-lg-4 offset-lg-2 text-center">
+        <img src="img/participants/vanguardist-logo.gif" alt="Vanguardist Wines Logo" class="img-fluid mb-5">
+      </div>
+      <div class="col-lg-4 text-center">
+        <img src="img/participants/casella-logo.jpg" alt="Casella Logo" class="img-fluid mb-5">
       </div>
     </div>
   </div>
