--- a/index.html
+++ b/index.html
@@ -68,8 +68,8 @@
   <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="css/grayscale.css?ver=0.2" rel="stylesheet">
-  <link href="css/extra-styles.css" rel="stylesheet">
+  <link href="css/grayscale.css?ver=0.3" rel="stylesheet">
+  <link href="css/extra-styles.css?ver=0.3" rel="stylesheet">
 
 
   <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/img/favicon.ico">
@@ -93,7 +93,7 @@
           <a class="nav-link js-scroll-trigger" href="#about">About</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link js-scroll-trigger" href="#participants">Participants</a>
+          <a class="nav-link js-scroll-trigger" href="#trial">Trial</a>
         </li>
         <li class="nav-item">
           <a class="nav-link js-scroll-trigger" href="#team">Team</a>
@@ -194,54 +194,53 @@
   </div>
 </section>
 
-<section id="participants" class="participants-section content-section bg-white">
+<section id="trial" class="participants-section content-section bg-white">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 mx-auto text-center mb-5">
         <h2 class="mb-4">VinoTrust trial participants</h2>
+        <p>More than 100 vineyard blocks in the Clare Valley are participating in the world’s largest ever wine provenance blockchain trial.</p>
       </div>
     </div>
     <div class="row mb-5">
-      <div class="col-lg-4 text-center">
+      <div class="col-lg-3 text-center">
         <img src="img/participants/grosset-logo.jpg" alt="Grosset Logo" class="img-fluid mb-5">
       </div>
-      <div class="col-lg-4 text-center">
+      <div class="col-lg-3 text-center">
         <img src="img/participants/kilikanoon-logo.jpg" alt="Kilikanoon Logo" class="img-fluid mb-5">
       </div>
-      <div class="col-lg-4 text-center">
+      <div class="col-lg-3 text-center">
         <img src="img/participants/kirrihill-wines-logo.png" alt="Kirrihill Wines Logo" class="img-fluid mb-5">
       </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-4 text-center">
+      <div class="col-lg-3 text-center">
         <img src="img/participants/mount-horrocks-logo.jpg" alt="Mount Horrocks Single Vineyard Logo" class="img-fluid mb-5">
       </div>
-      <div class="col-lg-4 text-center">
+    </div>
+    <div class="row">
+      <div class="col-lg-3 text-center">
         <img src="img/participants/tim-adams-logo.jpg" alt="Tim Adams Clare Valley Logo" class="img-fluid mb-5">
       </div>
-      <div class="col-lg-4 text-center">
+      <div class="col-lg-3 text-center">
         <img src="img/participants/bourke-travers-logo.png" alt="Bourke & Travers Clare Valley Logo" class="img-fluid mb-5">
       </div>
-    </div>
-    <div class="row">
-      <div class="col-lg-4 text-center">
+      <div class="col-lg-3 text-center">
         <img src="img/participants/vanguardist-logo.gif" alt="Vanguardist Wines Logo" class="img-fluid mb-5">
       </div>
-      <div class="col-lg-4 text-center">
+      <div class="col-lg-3 text-center">
         <img src="img/participants/pikes-logo.png" alt="Pikes Wines Logo" class="img-fluid mb-5">
-      </div>
-      <div class="col-lg-4 text-center">
-        <img src="img/participants/jim-barry-logo.jpg" alt="Jim Barry Logo" class="img-fluid mb-5">
       </div>
     </div>
     <div class="row">
-      <div class="col-lg-4 text-center">
+      <div class="col-lg-3 text-center">
+        <img src="img/participants/jim-barry-logo.jpg" alt="Jim Barry Logo" class="img-fluid mb-5">
+      </div>
+      <div class="col-lg-3 text-center">
         <img src="img/participants/taylors-logo.jpg" alt="Taylors Wines Logo" class="img-fluid mb-5">
       </div>
-      <div class="col-lg-4 text-center">
+      <div class="col-lg-3 text-center">
         <img src="img/participants/pauletts-logo.jpg" alt="Pauletts Wines Logo" class="img-fluid mb-5">
       </div>
-      <div class="col-lg-4 text-center">
+      <div class="col-lg-3 text-center">
         <img src="img/participants/casella-logo.jpg" alt="Casella Logo" class="img-fluid mb-5">
       </div>
     </div>
