3 stories on homepage

--- a/news.html
+++ b/news.html
@@ -84,8 +84,10 @@
   <div class="container">
     <div class="row mb-5">
       <div class="col-lg-8 mx-auto">
-        <h2 class="mb-2">Why VinoTrust?</h2>
-        <p>VinoTrust assures wine authenticity while simplifying Wine Australia’s Label Integrity Program record keeping.</p>
+        <h3 class="mb-2">Fake wine</h3>
+        <small>winecompanion.com.au</small>
+        <p>The issue of counterfeit bottles may seem far from home, affecting only the world’s oldest and rarest wines. But it’s more insidious than you might think.</p>
+        <a href="https://www.winecompanion.com.au/articles/news/fake-wine" class="btn btn-sm btn-primary" target="_blank">Read more</a>
       </div>
     </div>
   </div>
@@ -141,8 +143,8 @@
         <a href="https://twitter.com/vinotrust" target="_blank" class="mx-2">
           <i class="fab fa-twitter"></i>
         </a>
-        <a href="https://github.com/GT-Technology" target="_blank" class="mx-2">
-          <i class="fab fa-github"></i>
+        <a href="https://www.linkedin.com/company/vinotrust/" target="_blank" class="mx-2">
+          <i class="fab fa-linkedin"></i>
         </a>
         <a href="https://www.facebook.com/VinoTrustAustralia" target="_blank" class="mx-2">
           <i class="fab fa-facebook"></i>
