new text for we verify section

--- a/index.html
+++ b/index.html
@@ -167,9 +167,23 @@
 <section id="verify" class="verify-section content-section bg-dark">
   <div class="container">
     <div class="row">
-      <div class="col-lg-8 mx-auto text-white text-center mb-5">
+      <div class="col-lg-8 mx-auto text-white text-center mb-1">
         <h2 class="mb-2">We verify</h2>
-        <p class="text-white-50">Each stage of the supply chain is verified ensuring provenance, authenticity and integrity.</p>
+        <p class="text-white-50">VinoTrust can verify each stage of the supply chain ensuring provenance, authenticity and integrity.</p>
+      </div>
+    </div>
+    <div class="row mb-5">
+      <div class="col text-center">
+        <h3 class="text-white">Provenance</h3>
+        <p class="text-white-50">Confirms origin and history</p>
+      </div>
+      <div class="col text-center">
+        <h3 class="text-white">Authenticity</h3>
+        <p class="text-white-50">Proof that it is real</p>
+      </div>
+      <div class="col text-center">
+        <h3 class="text-white">Integrity</h3>
+        <p class="text-white-50">Uncorrupted, intact, unopened</p>
       </div>
     </div>
     <div class="row mb-5">
