correct news link

--- a/index.html
+++ b/index.html
@@ -303,7 +303,7 @@
             <h5 class="card-title">Fake wine</h5>
             <small>winecompanion.com.au</small>
             <p class="card-text">The issue of counterfeit bottles may seem far from home, affecting only the world’s oldest and rarest wines. But it’s more insidious than you might think.</p>
-            <a href="https://www.stockjournal.com.au/story/6496664/wine-trial-to-focus-on-fakes-in-clare-valley/" class="btn btn-sm btn-outline-light" target="_blank">Read more</a>
+            <a href="https://www.winecompanion.com.au/articles/news/fake-wine" class="btn btn-sm btn-outline-light" target="_blank">Read more</a>
           </div>
         </div>
       </div>
