--- a/index.html
+++ b/index.html
@@ -82,7 +82,10 @@
 <!-- Navigation -->
 <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
   <div class="container">
-    <a class="navbar-brand js-scroll-trigger" href="#page-top">VinoTrust</a>
+    <a class="navbar-brand js-scroll-trigger" href="#page-top">
+      <img src="img/vt_logo.gif" alt="VinoTrust" width="30px" height="30px">
+      VinoTrust
+    </a>
     <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
       Menu
       <i class="fas fa-bars"></i>
