--- a/index.html
+++ b/index.html
@@ -75,6 +75,16 @@
   <link rel="shortcut icon" type="image/vnd.microsoft.icon" href="/img/favicon.ico">
   <link rel="icon" type="image/vnd.microsoft.icon" href="/img/favicon.ico">
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-E6PM3WWHGX"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'G-E6PM3WWHGX');
+  </script>
+
 </head>
 
 <body id="page-top">
