adelaidenow.com.au

--- a/index.html
+++ b/index.html
@@ -289,6 +289,16 @@
     <div class="row mb-5">
       <div class="col">
         <div class="card">
+          <img src="img/advertiser20200303.jpg" class="card-img-top" alt="World's biggest wine blockchain trial begins">
+          <div class="card-body">
+            <h5 class="card-title">World's biggest wine blockchain trial begins</h5>
+            <small>adelaidenow.com.au</small>
+            <p class="card-text">The largest blockchain wine provenance trial in the world has kicked off in the Clare Valley, with about 100 vineyards from 12 wine companies taking part.</p>
+          </div>
+        </div>
+      </div>
+      <div class="col">
+        <div class="card">
           <img src="img/plainsproducer.jpg" class="card-img-top" alt="World-first in wine innovation">
           <div class="card-body">
             <h5 class="card-title">World-first in wine innovation</h5>
